--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
                     </div>
                 </div>
             </ul>
-        </div>
-        
+        </div>     
         <div class="login">
             <div class="btn">
                 <div class="txt">
@@ -87,6 +86,20 @@
                 <div class="log">
                     <a href="#">Login</a>
                     <img src="Resources/expand_more.png" alt=""> 
+                    <div class="log-flex">
+                        <div class="mng-pol">
+                            <img src="Resources/login-1.svg" alt="">
+                            <a href="#">Manage Policy</a>
+                        </div>
+                        <div class="raise">
+                            <img src="Resources/login-2.svg" alt="">
+                            <a href="#">Raise a claim</a>
+                        </div>
+                        <div class="renew">
+                            <img src="Resources/login-3.svg" alt="">
+                            <a href="#">Renew policy</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <a href="#">Help</a>       
@@ -196,6 +209,9 @@
             <img src="Resources/acko_home_1.svg" alt="">
         </div>
     </main>
+</section>
+<section class="testimonial">
+    
 </section>   
 </body>
 </html>
