--- a/index.html
+++ b/index.html
@@ -211,7 +211,52 @@
     </main>
 </section>
 <section class="testimonial">
-    
+    <div class="outer">
+        <div class="indi-test">
+            <div class="user">
+                <div class="star">
+                    <div class="space"><img src="Resources/5-star.svg" alt="">
+                    </div>
+                </div>
+                <p class="test">Very good experience. Got the settlement done in less than 24 hours.</p>
+                <div class="user-info">
+                    <img src="Resources/user1.png" alt="">
+                    <div class="user-flex">
+                        <p class="username">Rahul Gupta</p>
+                        <p class="loc">Delhi</p>
+                    </div>
+                </div>
+            </div>
+            <div class="user">
+                <div class="star">
+                    <div class="space"><img src="Resources/5-star.svg" alt="">
+                    </div>
+                </div>
+                <p class="test">Thank you so much for the amazing service, Special thanks to Mr. Rais Shaikh.</p>
+                <div class="user-info">
+                    <img src="Resources/user2.png" alt="">
+                    <div class="user-flex">
+                        <p class="username">Somnath Mane</p>
+                        <p class="loc">Pune</p>
+                    </div>
+                </div>
+            </div>
+            <div class="user">
+                <div class="star">
+                    <div class="space"><img src="Resources/5-star.svg" alt="">
+                    </div>
+                </div>
+                <p class="test">Hassle free insurance & quick response. Absolutely best insurance company ever</p>
+                <div class="user-info">
+                    <img src="Resources/user3.png" alt="">
+                    <div class="user-flex">
+                        <p class="username">Vinil Kumar</p>
+                        <p class="loc">Hyderabad</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>   
 </body>
 </html>
