--- a/index.html
+++ b/index.html
@@ -257,6 +257,78 @@
             </div>
         </div>
     </div>
+</section>
+<section class="partner">
+    <div class="partner-flex">
+        <p class="head1">Have a partner issued policy?</p>
+        <p class="head2">Login to claim & download your policy</p>
+        <div class="part-logo">
+            <div class="part">
+                <img src="Resources/part-1.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-2.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-3.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-4.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-5.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-6.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-7.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-8.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-9.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-10.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-11.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-12.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-13.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-14.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-15.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-16.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-17.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-18.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-19.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-20.svg" alt="">
+            </div>
+            <div class="part">
+                <img src="Resources/part-21.svg" alt="">
+            </div>
+        </div>
+        <p class="claim">Claim & more</p>
+    </div>
 </section>   
 </body>
 </html>
