--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <img src="Resources/part-21.svg" alt="">
             </div>
         </div>
-        <p class="claim">Claim & more</p>
+        <a href="#" class="claim">Claim & more</a>
     </div>
 </section>   
 </body>
