--- a/index.html
+++ b/index.html
@@ -329,6 +329,34 @@
         </div>
         <a href="#" class="claim">Claim & more</a>
     </div>
-</section>   
+</section> 
+<section class="love">
+    <div class="love-flex">
+        <p class="love-head">Here’s why you’ll love ACKO</p>
+        <div class="sub-love">
+            <div class="sub-1">
+                <div class="sub-2">
+                    <img src="Resources/love-1.svg" alt="">
+                    <p class="love-p1">Incredibly low premiums</p>
+                    <p class="love-p2">Insuring things that matter to you shouldn’t come at a cost. That’s why when you buy from us, you get insurance that fits your pocket.</p>
+                </div>
+            </div>
+            <div class="sub-1">
+                <div class="sub-2">
+                    <img src="Resources/love-2.svg" alt="">
+                    <p class="love-p1">Superquick and easy</p>
+                    <p class="love-p2">We’re easy, effortless and 100% digital. Forget paperwork, just access all our services with just a few clicks.</p>
+                </div>
+            </div>
+            <div class="sub-1">
+                <div class="sub-2">
+                    <img src="Resources/love-3.svg" alt="">
+                    <p class="love-p1">Hassle-free claims</p>
+                    <p class="love-p2">We’re on a mission to make insurance claims stress-free. Just give us a call or file a claim online and experience cashless, speedy claim settlements.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>  
 </body>
 </html>
