--- a/index.html
+++ b/index.html
@@ -357,6 +357,126 @@
             </div>
         </div>
     </div>
-</section>  
+</section> 
+<section class="links">
+    <div class="links-flex">
+        <div class="contact">
+            <p class="con-name">ACKO General Insurance Limited</p>
+            <p class="address">2nd Floor, #36/5, Hustlehub One East, Somasandrapalya, 27th Main road, Sector 2, HSR Layout, Bengaluru, Karnataka - 560102</p>
+            <p class="social-txt">We’re socially active!</p>
+            <div class="social">
+                <a href="#"><img class="social-img" src="Resources/fb.svg" alt=""></a>
+                <a href="#"><img src="Resources/insta.svg" alt="" class="social-img"></a>
+                <a href="#"><img src="Resources/linkedin.svg" alt="" class="social-img"></a>
+                <a href="#"><img src="Resources/twitter.svg" alt="" class="social-img"></a>
+                <a href="#"><img src="Resources/youtube.svg" alt="" class="social-img"></a>
+            </div>
+            <p class="social-txt">Download our app</p>
+            <div class="download">
+                <a href="#"><img src="Resources/play.svg" alt="" class="download-img"></a>
+                <a href="#"><img src="Resources/apple.svg" alt="" class="download-img"></a>
+            </div>
+        </div>
+        <div class="sub-links-flex">
+            <div class="sub-links">
+                <div class="list-flex">
+                    <p class="list-h">Company</p>
+                    <ul class="link-list">
+                        <li class="list-i"><a href="#">About us</a></li>
+                        <li class="list-i"><a href="#">Board of directors</a></li>
+                        <li class="list-i"><a href="#">Careers</a></li>
+                        <li class="list-i"><a href="#">Media kit</a></li>
+                        <li class="list-i"><a href="#">Articles</a></li>
+                        <li class="list-i"><a href="#">Ackology - The tech blog</a></li>
+                        <li class="list-i"><a href="#">Partnerships</a></li>
+                        <li class="list-i"><a href="#">Sitemap</a></li>
+                    </ul>
+                </div>
+                <div class="list-flex">
+                    <p class="list-h">Support</p>
+                    <ul class="link-list">
+                        <li class="list-i"><a href="#">Cancellations & refunds</a></li>
+                        <li class="list-i"><a href="#">Customer service</a></li>
+                        <li class="list-i"><a href="#">Downloads</a></li>
+                        <li class="list-i"><a href="#">Unclaimed amount</a></li>
+                        <li class="list-i"><a href="#">IRDAI website</a></li>
+                        <li class="list-i"><a href="#">Other Products</a></li>
+                    </ul>
+                </div>
+                <div class="list-flex">
+                    <p class="list-h">Legal</p>
+                    <ul class="link-list">
+                        <li class="list-i"><a href="#">Whistleblower policy</a></li>
+                        <li class="list-i"><a href="#">Public disclosure</a></li>
+                        <li class="list-i"><a href="#">Financials & disclosures</a></li>
+                        <li class="list-i"><a href="#">Privacy policy</a></li>
+                        <li class="list-i"><a href="#">Terms & conditions</a></li>
+                        <li class="list-i"><a href="#">Offer terms & conditions</a></li>
+                        <li class="list-i"><a href="#">Stewardship code</a></li>
+                        <li class="list-i"><a href="#">Disclaimer</a></li>
+                        <li class="list-i"><a href="#">Anti fraud policy</a></li>
+                        <li class="list-i"><a href="#">Health underwriting philosophy</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="line"></div>
+            <p class="article">Articles on insurance</p>
+            <div class="sub-links">
+                <div class="list-flex">
+                    <p class="list-h">General articles</p>
+                    <ul class="link-list">
+                        <li class="list-i"><a href="#">Insurance sector in India</a></li>
+                        <li class="list-i"><a href="#">Types of insurance</a></li>
+                        <li class="list-i"><a href="#">Updated list of traffic rules and fines</a></li>
+                        <li class="list-i"><a href="#">About your vehicle number</a></li>
+                        <li class="list-i"><a href="#">What is a PUC certificate?</a></li>
+                        <li class="list-i"><a href="#">Vehicle registration & re-registration</a></li>
+                        <li class="list-i"><a href="#">New vehicle registration process</a></li>
+                        <li class="list-i"><a href="#">Temporary vehicle registration number</a></li>
+                    </ul>
+                </div>
+                <div class="list-flex">
+                    <p class="list-h">Car insurance articles</p>
+                    <ul class="link-list">
+                        <li class="list-i"><a href="#">Motor insurance</a></li>
+                        <li class="list-i"><a href="#">Car insurance comparison</a></li>
+                        <li class="list-i"><a href="#">Third party vs comprehensive</a></li>
+                        <li class="list-i"><a href="#">Car insurance premium calculator</a></li>
+                        <li class="list-i"><a href="#">IDV in car insurance</a></li>
+                        <li class="list-i"><a href="#">Car insurance claims</a></li>
+                        <li class="list-i"><a href="#">Car insurance claim settlement ratio</a></li>
+                        <li class="list-i"><a href="#">Car insurance: Add-on covers</a></li>
+                    </ul>
+                </div>
+                <div class="list-flex">
+                    <p class="list-h">Two-Wheeler insurance articles</p>
+                    <ul class="link-list">
+                        <li class="list-i"><a href="#">IRDAI rules for two wheeler insurance</a></li>
+                        <li class="list-i"><a href="#">Two wheeler insurance comparison</a></li>
+                        <li class="list-i"><a href="#">Third party vs comprehensive</a></li>
+                        <li class="list-i"><a href="#">Bike insurance premium calculator</a></li>
+                        <li class="list-i"><a href="#">IDV in bike insurance</a></li>
+                        <li class="list-i"><a href="#">Two wheeler insurance claims</a></li>
+                        <li class="list-i"><a href="#">Two wheeler claim settlement ratio</a></li>
+                        <li class="list-i"><a href="#">Two wheeler insurance: Add-on covers</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="footer">
+    <div class="footer-flex">
+        <div class="sub-footer">
+            <p class="footer-p1">CIN: U66000KA2016PLC138288</p>
+            <p class="footer-p1">IRDAI Registration No: 157</p>
+            <p class="footer-p1">Category: Non-Life Insurance</p>
+        </div>
+        <div class="sub-footer">
+            <p class="footer-p2">The use of images and brands are only for the purpose of indication and illustration. ACKO claims no rights on the IP rights of any third parties. The ratings are derived from reviews and feedback received from Google and Facebook users on their respective platforms. | *Savings of upto Rs. 50,000 have been calculated on the IDV of Rs. 18,00,000 and 0% NCB. Amount saved is in comparison to tariff rates. Product name: Private Car Policy - Bundled | UIN: IRDAN157RP0014V01201819 |</p>
+            <p class="footer-p3">Trade logo displayed above belongs to ACKO Technology & Services Pvt Ltd and used by ACKO General insurance Limited under License. For more details on risk factors, terms, conditions and exclusions, please read the policy wordings carefully before concluding a sale.</p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
