--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     </li>
                     <div class="prod">
                             <div class="prod-flex">
-                                <div class="car-prod">
-                                    <div class="car-h">
+                                <div class="prod-sub">
+                                    <div class="prod-h">
                                         <img src="Resources/prod-1.svg" alt="">
                                         <p>Car & Taxi</p>
                                     </div>
@@ -28,16 +28,16 @@
                                     <a href="#">Third Party Car Insurance</a>
                                     <a href="#">Commercial Car Insurance</a>
                                 </div>
-                                <div class="bike-prod">
-                                    <div class="bike-h">
+                                <div class="prod-sub">
+                                    <div class="prod-h">
                                         <img src="Resources/prod-2.svg" alt="">
                                         <p>Bike</p>
                                     </div>
                                     <a href="#">Comprehensive Bike Insurance</a>
                                     <a href="#">Third Party Bike Insurance</a>
                                 </div>
-                                <div class="health-prod">
-                                    <div class="health-h">
+                                <div class="prod-sub">
+                                    <div class="prod-h">
                                         <img src="Resources/prod-3.svg" alt="">
                                         <p>Health</p>
                                     </div>
@@ -45,8 +45,8 @@
                                     <a href="#">Arogya Sanjeevani</a>
                                     <a href="#">Group Medical Cover</a>
                                 </div>
-                                <div class="elec-prod">
-                                    <div class="elec-h">
+                                <div class="prod-sub">
+                                    <div class="prod-h">
                                         <img src="Resources/prod-4.svg" alt="">
                                         <p>Electronics</p>
                                     </div>
@@ -60,15 +60,15 @@
                     <li><a href="#">Resources</a></li>
                     <div class="rcs">
                         <div class="rcs-flex">
-                          <div class="ar">
+                          <div class="rcs-li">
                             <img src="Resources/prod-5.svg" alt="">  
                             <a href="#">All Resources</a>
                           </div>
-                          <div class="guid">
+                          <div class="rcs-li">
                             <img src="Resources/prod-6.svg" alt="">  
                             <a href="#">Guides</a>
                           </div>
-                          <div class="art">
+                          <div class="rcs-li">
                             <img src="Resources/prod-7.svg" alt="">  
                             <a href="#">Articles</a>
                           </div>
@@ -87,15 +87,15 @@
                     <a href="#">Login</a>
                     <img src="Resources/expand_more.png" alt=""> 
                     <div class="log-flex">
-                        <div class="mng-pol">
+                        <div class="log-li">
                             <img src="Resources/login-1.svg" alt="">
                             <a href="#">Manage Policy</a>
                         </div>
-                        <div class="raise">
+                        <div class="log-li">
                             <img src="Resources/login-2.svg" alt="">
                             <a href="#">Raise a claim</a>
                         </div>
-                        <div class="renew">
+                        <div class="log-li">
                             <img src="Resources/login-3.svg" alt="">
                             <a href="#">Renew policy</a>
                         </div>
@@ -118,20 +118,20 @@
                 Zero commision. Zero paperwork
             </h2>
             <div class="option">
-                <div class="car">
-                    <div class="car-img">
+                <div class="option-sub">
+                    <div class="option-img">
                         <img src="Resources/car.svg" alt="">
                     </div>     
                     <p>Car & taxi</p>
                 </div>
-                <div class="bike">
-                    <div class="bike-img">
+                <div class="option-sub">
+                    <div class="option-img">
                         <img src="Resources/bike.svg" alt="">
                     </div>
                     <p>Bike</p>
                 </div>
-                <div class="health">
-                    <div class="health-img">
+                <div class="option-sub">
+                    <div class="option-img">
                         <img src="Resources/health.svg" alt="">
                     </div>
                     <p>Health</p>
@@ -188,17 +188,17 @@
                     </div>
                 </div> 
                 <div class="foot">
-                    <div class="f1">
+                    <div class="foot-sub">
                         <img src="Resources/foot-1.svg" alt="">
                         <p>Licensed by IRDAI</p>
                     </div>
-                    <div class="f2"></div>
-                    <div class="f3">
+                    <div class="foot-line"></div>
+                    <div class="foot-sub">
                         <img src="Resources/foot-2.svg" alt="">
                         <p>6.2 Crore users</p>
                     </div>
-                    <div class="f4"></div>
-                    <div class="f5">
+                    <div class="foot-line"></div>
+                    <div class="foot-sub">
                         <img src="Resources/foot-3.svg" alt="">
                         <p>95% 5 <img src="Resources/foot-4.svg" alt="">Ratings</p>
                     </div>
