--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
     <section class="first">
     <header>
+        <div class="mob">
+            <a href="index.html">
+                <img src="Resources/acko-mob.svg" alt="logo" class="mob-logo">
+            </a>
+            <img src="Resources/menu-mob.png" alt="" class="menu">
+        </div>
         <div class="logo">
-            <a href="index.html"><img src="Resources/logo.png" alt="logo"></a>
+            <a href="index.html" class="desktop"><img src="Resources/logo.png" alt="logo"></a>
             <ul class="navi">
                 <div class="prod-l">
                     <li>
@@ -121,18 +127,27 @@
                 <div class="option-sub">
                     <div class="option-img">
                         <img src="Resources/car.svg" alt="">
-                    </div>     
+                    </div>
+                    <div class="option-img-mob">
+                        <img src="Resources/car-mob.svg" alt="">
+                    </div>          
                     <p>Car & taxi</p>
                 </div>
                 <div class="option-sub">
                     <div class="option-img">
                         <img src="Resources/bike.svg" alt="">
                     </div>
+                    <div class="option-img-mob">
+                        <img src="Resources/bike-mob.svg" alt="">
+                    </div>
                     <p>Bike</p>
                 </div>
                 <div class="option-sub">
                     <div class="option-img">
                         <img src="Resources/health.svg" alt="">
+                    </div>
+                    <div class="option-img-mob">
+                        <img src="Resources/health-mob.svg" alt="">
                     </div>
                     <p>Health</p>
                 </div>
@@ -151,14 +166,16 @@
                     <div class="or">
                         <p>OR</p>
                     </div>
-                <div class="line-2"></div>
+                <div class="line-1"></div>
                 </div>
                 <div class="new_car">
                     <div class="new_car_in">
                         <img src="Resources/car-2.svg" alt="">
+                        <img src="Resources/car-mob-2.svg" alt="" class="mob">
                         <div class="new_car_p">
                             <p class="p1">Looking to insure your new car?</p>
                             <p class="p2">Save big with our zero commission insurance</p>
+                            <a href="#" class="p3">Get a quote</a>
                         </div>
                         <div class="quote"><a href="#">Get a quote</a></div>
                     </div>
