--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="or">
                         <p>OR</p>
                     </div>
-                <div class="line-1"></div>
+                    <div class="line-1"></div>
                 </div>
                 <div class="new_car">
                     <div class="new_car_in">
@@ -175,31 +175,36 @@
                         <div class="new_car_p">
                             <p class="p1">Looking to insure your new car?</p>
                             <p class="p2">Save big with our zero commission insurance</p>
-                            <a href="#" class="p3">Get a quote</a>
+                            <a href="#" class="quote-mob">Get a quote</a>
                         </div>
                         <div class="quote"><a href="#">Get a quote</a></div>
+                    </div>
+                    <div class="arrow-mob">
+                        <img src="Resources/right-arrow-mob.png" alt="">
                     </div>
                 </div>  
                 <div class="poster">
                     <div class="poster1">
-                        <img src="Resources/poster-1.png" alt="">
-                        <div class="pos">
-                            <img src="Resources/poster-2.svg" alt="">
-                        </div> 
-                    </div>
-                    <div class="poster2">
-                        <div class="pos-p">
-                            <p class="sponsor">Official Insurance Partner</p>
-                        </div>
-                        <div class="spons-logo">
-                            <div class="s1">
-                                <img src="Resources/poster-3.svg" alt="">
-                            </div>
-                            <div class="s2">
-                                <img src="Resources/poster-4.svg" alt="">
-                            </div>
-                            <div class="s3">
-                                <img src="Resources/poster-5.svg" alt="">
+                        <img class="pos-img" src="Resources/poster-1.png" alt="">
+                        <div class="pos-mob">
+                            <div class="pos">
+                                <img src="Resources/poster-2.svg" alt="">
+                            </div> 
+                            <div class="poster2">
+                                <div class="pos-p">
+                                    <p class="sponsor">Official Insurance Partner</p>
+                                </div>
+                                <div class="spons-logo">
+                                    <div class="s1">
+                                        <img src="Resources/poster-3.svg" alt="">
+                                    </div>
+                                    <div class="s2">
+                                        <img src="Resources/poster-4.svg" alt="">
+                                    </div>
+                                    <div class="s3">
+                                        <img src="Resources/poster-5.svg" alt="">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
